# exp

./: .gitignore  .gitmodules  README.md
algos/: .lvimrc  BUILD  MyArray.h  MyArrayTest.cpp  WORKSPACE  bazel-algos  bazel-bin  bazel-genfiles  bazel-out  bazel-testlogs  gtest.BUILD  insertSort.h  insertSortTest.cpp  main.cpp
aws-summit/: notes.txt
devbox/: .gitignore  Dockerfile  Vagrantfile  docker-compose.yml  init.sh
devbox/ssh/: sshd_config
elevator/: attempt1.js  attempt2.js
erio2/src/: meme.py  meme.s
euler/: Euler 601.ipynb
fb-practice/: graphsearch.py  mergesort.py  qsort.py  rb-tree.py
go-server/: go-server  server.go
go-test/: Dockerfile  test.go
guessing-game/: Cargo.toml
guessing-game/src/: main.rs
hn/: CMakeLists.txt
hn/hn/: CMakeLists.txt  HttpClient.cpp  HttpClient.h  main.cpp
hs/: hs.cabal
hs/src/: Lib.hs
k8s/: nginx.yaml
ml-research/: nmf.m
numpy-speed/: numpy-speed.ipynb
nvidia/: nbody.cu  nbody_orig.cu
omnimike.net/: notes.txt
omnimike.net/salt/: top.sls
omnimike.net/www/: 500.html
re-editor/: .babelrc  .eslintrc.js  .flowconfig  Makefile  package.json  webpack.config.js
redux-app/: .babelrc  .eslintrc.js  .flowconfig  LICENSE  config.js  gulpfile.js  package.json  redux-app.sublime-project
redux-app/client/: App.js
relay/: .eslintrc
relay/src/: index.js
rouge/: Makefile
rouge/src/: main.cc  map.cc  map.data  map.h  map_data.h  point.h  tile.cc  tile.h
rust-test/: Cargo.toml
salt/: Vagrantfile
swift-app/ellen/: AppDelegate.swift  (+1 more)
typescript/: package.json  tsconfig.json  tslint.json
(+40 files in other folders)
